<resources>
    <string name="app_name">MathemagicalC</string>
    <string name="remarks">Numerical Methods and Computations</string>
    <string name="app_description">Implementation of algorithms</string>
    <string name="description_text">Operation List</string>
    <string name="dec_frac_tobinary">1. Decimal to Binary (Fractional Part Only)</string>
    <string name="dec_int_tobinary">2. Decimal to Binary (Integer Part Only)</string>
    <string name="dec_tobinary">3. Decimal to Binary (Any Number)</string>
    <string name="rootlocation_bisection">4. Location of Roots (Bisection)</string>
    <string name="rootlocation_falseposition">5. Location Of Roots (Regula Falsi)</string>
    <string name="rootlocation_newtonraphson">6. Locate Of Roots (Newton Raphson)</string>
    <string name="rootlocation_secante">7. Location Of Roots (Secante)</string>
    <string name="systemofequations_partial_pivoting">8. Sys. of Equations (Partial Pivoting)</string>
    <string name="systemofequations_complete_pivoting">9. Sys. of Equations (Complete Pivoting)</string>
    <string name="calculate">Calculate</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="button_view_source">View Source…</string>
    <string name="decimal_to_binary_title">Decimal to Binary converter</string>
    <string name="decimal_to_binary_subtitle">Convert Decimal Fractions To Binary</string>
    <string name="title_activity_private_activity">private_activity</string>
    <string name="dec_to_bin_frac_desc">Converts a decimal number (n) to it\'s equivalent binary number where 1 > n > 0 </string>
    <string name="enter_binary_number">Enter a decimal fraction (eg 0.123): </string>
    <string name="dec_to_bin_int_desc">Converts a decimal integer (N) to it\'s equivalent binary number where  N >= 1 </string>
    <string name="enter_decimal_int">Enter a decimal Integer (eg 30)</string>
    <string name="enter_decimal">Enter a decimal number (eg 30 or 30.53)</string>
    <string name="decimal_to_bin_desc">Converts a decimal integer (N) to it\'s equivalent binary number where  N > 0 </string>
    <string name="decimal_to_hexadecimal_desc">Converts a decimal integer (N) to it\'s equivalent hexadecimal where  N > 0 </string>
    <string name="bisection_desc">Locate the root of an equation of the form f(x) = 0</string>
    <string name="bisection_enter_eqn">Equation to evaluate [eg "f(x) = 2*x^3 + 2"]</string>
    <string name="system_of_equations">System of equations</string>
    <string name="tolerance">Tolerance</string>
    <string name="iterations">Iterations</string>
    <string name="loc_of_rooots">Location of Roots</string>
    <string name="sys_of_eqns">System of Equations</string>
    <string name="number_conversions">Numerical Convertions</string>
    <string name="ordinary_diff_eqn">Ord. Diff. Eqns (ODE)</string>
    <string name="show_algorithm">Show Algorithm</string>
    <string name="stopping_criteria">Stopping Criteria</string>
    <string name="initial_guess">Initial Guess:</string>
    <string name="back_to_location_of_roots_menu">Back to lOR Menu</string>
    <string name="x1">x1</string>
    <string name="x0">x0</string>
    <string name="header_bisection">Bisection Method</string>
    <string name="show_iterations">show iterations</string>
    <string name="iteration_table">Iteration: %d</string>
    <string name="go_to_operation">Go to operation....</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="dec_to_hexadecimal">Dec to Hexadecimal</string>
    <string name="dec_to_octal">Dec to Octal</string>
    <string name="dec_to_bin_any_number">Dec to Bin (Any Number)</string>
    <string name="bin_to_decimal">Bin to Decimal</string>
    <string name="numerical_converter">Numerical Converter</string>
    <string name="dec_to_bin_fractions">Dec to Bin (Fractions)</string>
    <string name="dec_to_bin_integers">Dec to Bin (Integers)</string>
    <string name="decimal_to_octal_desc"><![CDATA[Converts a decimal integer (N) to it\'s equivalent octal value where N > 0]]></string>
    <string name="back_to_sys_of_eqns">Back to Sys of Eqns</string>
    <string name="all_in_one_converter">All in one converter</string>
    <string name="conversion_all_in_one_desc">Enter a decimal number and it will be converted to binary, octal and hexadecimal</string>
    <string name="solve">Solve</string>
    <string name="question_mark">#63</string>

    <string-array name="main_menu_legacy">
        <item>1. Decimal to Binary (Fractions)</item>
        <item>2. Decimal to Binary (Integers)</item>
        <item>3. Decimal to Binary (Any Number)</item>
        <item>4. Binary to Decimal</item>
        <item>5. Decimal to Hexadecimal</item>
        <item>6. Decimal to Octal</item>
        <item>7. Location Of Roots (Bisection)</item>
        <item>8. Location Of Roots (Newton Raphson)</item>
        <item>9. Location Of Roots (Regula Falsi) </item>
        <item>10. Location Of Roots (Secante)</item>
        <item>11. Sys of Eqns (3 x 3) Partial Pivoting</item>
        <item>12. Sys of Eqns (3 x 3) Complete Pivoting</item>
        <item>13. Sys of Eqns (4 x 4) Partial Pivoting</item>
        <item>14. Sys of Eqns (4 x 4) Complete Pivoting</item>
        <item>15. Sys of Eqns (Gauss Seidel)</item>
        <item>16. Sys of Eqns (Gauss Seidel with SOR)</item>
        <item>17. Sys of Eqns (Jacobi)</item>
        <item>18. Ordinary Differential Equations</item>
        <item>19. Lagrange Interpolation</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>


    <string name="overview">
        <![CDATA[
        This application\'s primary motive is to solve NUMERICAL METHODS AND COMPUTATIONAL problems.
        "The main topics covered in this version of the software are <b>Location of roots</b>, <b>Numerical Conversions</b>,
        <b>Ordinary Differential Equations</b> and <b>Location of roots</b>. Under these main topics, several subtopics have
        been covered as well. Users are to <font color = "brown"><b>Note</b></font> however that answers provided in this application may be more accurate that those presented in text books because in most cases, rounding
        off is disabled making the final solution as accurate as possible.
        ]]>
    </string>

    <string name="overview_main">
        This application\'s primary motive is to solve NUMERICAL METHODS AND COMPUTATIONAL problems.
        The main topics covered in this version of the software are Location of roots,Numerical Conversions, Ordinary Differential
        Equations and Location of roots.
    </string>


    <string name="action_settings">Settings</string>
    <string name="euler_forward_method">Euler\'s Forward Method</string>
    <string name="back_to_ode_menu">Back to ODE Menu</string>
    <string name="title_activity_show_algorithm">ShowAlgorithm</string>
    <string name="algorithms">Algorithms</string>
    <string name="operations">Operations</string>
    <string name="xo">Xo</string>
    <string name="xn">Xn</string>
    <string name="about">About</string>
    <string name="interpolation">Interpolation</string>
    <string name="lagrange_header">Lagrange Interpolation</string>
    <string name="gaussian_complete_header">Gaussian Elimination with Complete Pivoting</string>
    <string name="gaussian_partial_header">Gaussian Elimination with Partial Pivoting</string>
    <string name="gauss_seidel_desc">Equation of the form [i]Ax[/i] = [i]b[/i]</string>
    <string name="gauss_seidel_header">Gauss Seidel\'s Method</string>
    <string name="gauss_seidel_sor_header">Gauss Seidel\'s Method With SOR</string>
    <string name="jacobi_header">Jacobi\'s Method</string>
    <string name="jacobi_desc">Equation of the form [i]Ax[/i] = [i]b[/i]</string>
    <string name="bisection_expansion_header">Expansion of Iterations for Bisection</string>
    <string name="bisection_expansion_desc">The results of each iteration step is given below</string>
    <string name="interval">Interval:</string>
    <string name="custom_interval">[-2, -5]</string>
    <string name="iterations_colon">Iterations:</string>
    <string name="false_position_header">False Position Method</string>
    <string name="false_position_expansion_header">Expansion of Iterations for False Position</string>
    <string name="false_position_expansion_desc">The results of each iteration step is given below</string>
    <string name="newton_raphson_header">Newton Raphson</string>
    <string name="newton_raphson_expansion_header">Expansion of Iterations for Newton Raphson</string>
    <string name="newton_raphson_expansion_desc">The results of each iteration step is given below</string>
    <string name="secante_method_header">Secante Method</string>
    <string name="secante_expansion_header">Expansion of Iterations for Secante</string>
    <string name="secante_expansion_desc">The results of each iteration step is given below</string>
    <string name="euler_expansion_header">Expansion of Iterations for Euler\'s Method</string>
    <string name="method_expansion_desc">The results of each iteration step is given below</string>
    <string name="ode_header">Ordinary Differential Equations</string>
    <string name="bin_to_dec_header">Convert Binary to Decimal</string>
    <string name="bin_to_dec_desc">Convert a binary number to it\'s corresponding decimal numeral</string>
    <string name="algo_desc">dynamic description of algorithm. A short description should be shown here</string>
    <string name="algo_header">Dynamic Header Text</string>
    <string name="dynamic_input_hint">dynamic input hint</string>
    <string name="binary_input_hint">Enter a binary number eg 1010</string>
    <string name="errormsg_empty_input">Input cannot be empty</string>
    <string name="decimal_frac_input_hint">Enter a decimal fraction eg 0.123</string>
    <string name="decimal_int_input_hint">Enter an Integer eg 25</string>
    <string name="errormsg_greater_than_zero">Should be greater than 0!</string>
    <string name="back_to_conversions_menu">Back to Conversions Menu</string>
    <string name="binary">Binary</string>
    <string name="octal">Octal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="hint_y_0">y(0)</string>
    <string name="hint_step_size_h">step size (h)</string>
    <string name="conditions">Conditions</string>
    <string name="desc_euler_forward_method">Solve numerically an Initial Value Problem using Euler\'s Method</string>
    <string name="hint_initial_value_problem_ivp">Initial Value Problem (IVP)</string>
    <string name="about_header">Numerical methods and computations on steroids</string>
    <string name="about_text_1">Based on lectures, ideas and inspiration from</string>
    <string name="version">Version %1$s</string>
    <string name="about_text_2">Dr. Francis O. Boateng (Snr Lecturer, UEW-K)</string>
    <string name="x3">x3</string>
    <string name="x2">x2</string>
    <string name="gauss_seidel_eqn3">Eqn 3. (In terms of x3)</string>
    <string name="gauss_seidel_eqn2">Eqn 2. (In terms of x2)</string>
    <string name="gauss_seidel_eqn1">Eqn 1. (In terms of x1)</string>
    <string name="epsilon">Epsilon</string>
    <string name="calculating">Calculating…</string>
</resources>
