<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnCalculate"
        style="@style/AppMaterialTheme.ButtonStyle"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/btnShowAlgo"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/show_algorithm" />

    <Button
        android:id="@+id/btnBackToMainMenu"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"
        android:textStyle="bold" />
</LinearLayout>