<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        style="@style/AppMaterialTheme.HeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/algo_header" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/algo_desc"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/desc_text_size" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/std_layout_margin"
        android:layout_marginRight="@dimen/std_layout_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/dynamic_input_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/answerColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvAnswer"
        style="@style/AnswerStyle"
        tools:text="0.000000"
        tools:visibility="visible" />


    <Button
        android:id="@+id/btnCalculate"
        style="@style/AppMaterialTheme.ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/btnShowAlgo"
        style="@style/AppMaterialTheme.ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/show_algorithm" />

    <Button
        android:id="@+id/btnBackToMainMenu"
        style="@style/AppMaterialTheme.ButtonStyle.Exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"
        android:textStyle="bold" />
</LinearLayout>