<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        style="@style/AppMaterialTheme.HeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/false_position_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/bisection_desc"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/std_layout_margin"
                android:layout_marginRight="@dimen/std_layout_margin"
                android:hint="@string/bisection_enter_eqn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_equation"
                    style="@style/EquationInputStyle"
                    tools:text="2x + 3 = 25" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/std_layout_margin"
                android:text="@string/initial_guess"
                android:textColor="#7e2c1e" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_x0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/std_layout_margin"
                    android:layout_marginRight="@dimen/std_layout_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/x0"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="@string/x0"
                        android:inputType="numberDecimal|numberSigned"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_x1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/std_layout_margin"
                    android:layout_marginRight="@dimen/std_layout_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/x1"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="@string/x1"
                        android:inputType="numberDecimal|numberSigned"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/std_layout_margin"
                android:text="@string/stopping_criteria"
                android:textColor="#7e2c1e" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_iterations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/std_layout_margin"
                    android:layout_marginRight="@dimen/std_layout_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="@string/iterations"
                        android:inputType="numberSigned"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_tolerance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/std_layout_margin"
                    android:layout_marginRight="@dimen/std_layout_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTolerance"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="@string/tolerance"
                        android:inputType="numberDecimal|numberSigned"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tvAnswer"
                style="@style/AnswerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                tools:text="0.000000" />

            <Button
                android:id="@+id/btnCalculate"
                style="@style/AppMaterialTheme.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/calculate" />

            <Button
                android:id="@+id/btnShowAlgo"
                style="@style/AppMaterialTheme.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/show_algorithm" />

            <Button
                android:id="@+id/btnBackToMainMenu"
                style="@style/AppMaterialTheme.ButtonStyle.Exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_main_menu"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>