<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        style="@style/AppTheme.HeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gauss_seidel_header" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/gauss_seidel_desc"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_equationx1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:hint="@string/gauss_seidel_eqn1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_equationx2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:hint="@string/gauss_seidel_eqn2"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_equationx3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:hint="@string/gauss_seidel_eqn3"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/x1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:gravity="center_horizontal"
                android:hint="@string/x1"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/x2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:gravity="center_horizontal"
                android:hint="@string/x2"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/x3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:gravity="center_horizontal"
                android:hint="@string/x3"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="center" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTolerance"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/tolerance"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tvAnswer"
        style="@style/AnswerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:visibility="gone"

        tools:text="0.000000" />

    <Button
        android:id="@+id/btnCalculate"
        style="@style/AppTheme.ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/calculate" />

    <Button
        android:id="@+id/btnShowAlgo"
        style="@style/AppTheme.ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/show_algorithm" />

    <Button
        android:id="@+id/btnBackToMainMenu"
        style="@style/AppTheme.ButtonStyle.Exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"
        android:textStyle="bold" />

</LinearLayout>