<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/tvHeader"
            style="@style/AppMaterialTheme.HeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gaussian_partial_header" />

        <include layout="@layout/layout_matrix3x3" />


        <Button
            android:id="@+id/btnCalculate"

            style="@style/AppMaterialTheme.ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/solve" />

        <Button
            android:id="@+id/btnBack"
            style="@style/AppMaterialTheme.ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/back_to_main_menu" />

    </LinearLayout>

</ScrollView>